# CreatureBattler

./: CMakeLists.txt  CreatureBattler.cpp  CreatureBattler.h
Battle/: Battle.cpp  Battle.h  CombatMoment.cpp  CombatMoment.h  Turn.cpp  Turn.h
CreatureModel/: Creature.cpp  Creature.h  Move.cpp  Move.h
CreatureModel/Enum/: CreatureStatEnum.cpp  CreatureTypeEnum.cpp  MoveTypeEnum.cpp
documentation/: UML class diagram.drawio  UML sequence diagram.drawio
include/rng/: RandomManager.cpp  RandomManager.h
